--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -189,7 +188,8 @@ generados.</li>
   <div id="puericultura" class="content">
     <h2>🧸 Puericultura</h2>
     <p>Exploramos el impacto del uso de pañales en la salud, economía y medio ambiente.</p>
-    <p>📄 <a href="archivos/Green-Baby-Health.pdf" target="_blank">Abrir presentación PDF</a></p>
+    <p>📄<a href="Green-Baby-Health.pdf" target="_blank">Abrir presentación PDF</a>
+</p>
     <h3>🎥 Video:</h3>
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/Kk55Ax3UBnY" frameborder="0" allowfullscreen style="border-radius:10px;"></iframe>
   </div>
@@ -204,7 +204,8 @@ generados.</li>
       <li>🧪 Hígado: alteración celular</li>
       <li>🚰 Riñones: daño de nefronas</li>
     </ul>
-    <a href="archivos/reporte-microplasticos.pdf" target="_blank">📄 Descargar reporte completo</a>
+    <a href="reporte-microplasticos.pdf" target="_blank">📄 Descargar reporte completo</a>
+
   </div>
 
   <div id="matematicas" class="content">
