--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Separación Responsable de Residuos</title>
   <style>
     :root {
@@ -66,6 +66,7 @@
       transition: background-color 0.3s ease;
       border-radius: 5px 5px 0 0;
       margin: 5px;
+      cursor: pointer;
     }
 
     nav a:hover {
@@ -128,128 +129,7 @@
 
   <header>
     <h1>Separación Responsable de Residuos Sólidos</h1>
-    <h2>y desarrollo de hábitos conscientes de consumo en el CBTis 118 y la comunidad</h2>
-    <p>♻️ Educar en conciencia, actuar por el planeta.</p>
-  </header>
-
-  <nav>
-    <a href="#" onclick="showTab('inicio')">Inicio</a>
-    <a href="#" onclick="showTab('ciencias')">Ciencias Sociales</a>
-    <a href="#" onclick="showTab('puericultura')">Puericultura</a>
-    <a href="#" onclick="showTab('energia')">Conservación de la Energía</a>
-    <a href="#" onclick="showTab('matematicas')">Pensamiento Matemático</a>
-    <a href="#" onclick="showTab('ingles')">Inglés</a>
-    <a href="#" onclick="showTab('lengua')">Lengua y Comunicación</a>
-  </nav>
-
-  <div id="inicio" class="content active">
-    <h2>🎯 Objetivo General</h2>
-    <p>La comunidad escolar del CBTis 118(estudiantes,
-personal administrativo y docentes) fomentan en la
-
-comunidad cercana al plantel la conciencia y la
-práctica sobre la separación de residuos sólidos a
-partir de la difusión, práctica y desarrollo de hábitos
-
-de consumo conscientes que disminuyan la
-
-generación de dichos residuos tanto en la escuela
-
-como en la comunidad.</p>
-    <h2>🔍 Objetivos Específicos</h2>
-    <ul>
-      <li>1.Comprender la separación de residuos sólidos:
-Brindar capacitación a la comunidad escolar para que comprenda la
-importancia y el proceso adecuado de separación de residuos sólidos.</li>
-      <li>2.Practicar la separación responsable:
-Implementar estrategias (como el aprendizaje basado en retos)
-para garantizar la separación efectiva de residuos sólidos en el centro
-escolar y en las ubicaciones elegidas para intervenir en la comunidad.</li>
-      <li>3.Distribuir residuos a empresas recicladoras:
-Gestionar eficientemente los residuos sólidos, promoviendo distribución a
-empresas recicladoras locales.</li>
-      <li>4.Difundir los logros:
-Compartir las acciones y resultados obtenidos para sensibilizar y motivar a
-otros a separar los residuos, esto a través de los espacios digitales
-generados.</li>
-    </ul>
-  </div>
-
-  <div id="ciencias" class="content">
-    <h2>🌍 Ciencias Sociales</h2>
-    <p>Reflexionamos sobre el impacto social, legal y cultural del consumo.</p>
-    <div style="text-align:center; margin-top:20px;">
-      <a href="https://vt.tiktok.com/ZSkCSHyUg/" target="_blank" style="background-color:#25d366; color:white; padding:12px 20px; border-radius:8px; text-decoration:none; font-weight:bold;">
-        ▶️ Ver video en TikTok
-      </a>
-    </div>
-  </div>
-
-  <div id="puericultura" class="content">
-    <h2>🧸 Puericultura</h2>
-    <p>Exploramos el impacto del uso de pañales en la salud, economía y medio ambiente.</p>
-    <p>📄<a href="Green-Baby-Health.pdf" target="_blank">Abrir presentación PDF</a>
-</p>
-    <h3>🎥 Video:</h3>
-    <iframe width="100%" height="315" src="https://www.youtube.com/embed/Kk55Ax3UBnY" frameborder="0" allowfullscreen style="border-radius:10px;"></iframe>
-  </div>
-
-  <div id="energia" class="content">
-    <h2>⚛️ Conservación de la Energía</h2>
-    <p>Proyecto sobre microplásticos y su efecto en órganos humanos:</p>
-    <ul>
-      <li>❤️ Corazón: rigidez arterial</li>
-      <li>🧠 Cerebro: daño neurológico</li>
-      <li>💨 Pulmones: fibrosis</li>
-      <li>🧪 Hígado: alteración celular</li>
-      <li>🚰 Riñones: daño de nefronas</li>
-    </ul>
-    <a href="reporte-microplasticos.pdf" target="_blank">📄 Descargar reporte completo</a>
-
-  </div>
-
-  <div id="matematicas" class="content">
-    <h2>📊 Pensamiento Matemático</h2>
-    <p>Aplicamos matemáticas en una colecta de latas:</p>
-    <ul>
-      <li>Cada alumno debía juntar 100 latas.</li>
-      <li>Peso promedio por lata: 14 gramos.</li>
-      <li>100 latas = 1.4 kg → 30 alumnos = 42 kg.</li>
-      <li>Precio por kilo: $20 → Total: $840.</li>
-    </ul>
-    <h3>🧠 Reflexión</h3>
-    <p>Esta actividad muestra cómo lo que se considera basura puede tener valor económico y educativo.</p>
-  </div>
-
-  <div id="ingles" class="content">
-    <h2>🌐 Inglés</h2>
-    <h3>♻️ Poster: Sort Your Waste</h3>
-    <div style="text-align:center; margin: 20px 0;">
-      <a href='https://postimg.cc/HVFqNJv2' target='_blank'><img src='https://i.postimg.cc/Nj0Q5m1W/image-edit-20250614201057.jpg' border='0' alt='Poster'></a>
-    </div>
-  </div>
-
-  <div id="lengua" class="content">
-    <h2>📚 Lengua y Comunicación</h2>
-    <p>Elaboramos una infografía para concientizar sobre el entorno desde el lenguaje visual y escrito.</p>
-    <h3>🖼️ Vista previa:</h3>
-    <div style="text-align:center;">
-      <a href='https://postimg.cc/S22tF9Qd' target='_blank'><img src='https://i.postimg.cc/gJN9hyfC/Infograf-a-PAEC-0001.jpg' border='0' alt='Infografía' width="100%" style="max-width:600px;"></a>
-    </div>
-    <p style="text-align:center;"><a href="https://drive.google.com/file/d/1H6ZZ5uhOPSmqSANsLoLFWGrwXV7oEOmy/view?usp=drivesdk" target="_blank">📥 Descargar infografía PDF</a></p>
-  </div>
-
-  <footer>
-    Créditos: Fonseca Arias Karen · López Sánchez Ángel Dorian · Mendoza Benítez Catherine Linette · Nieves Moya María Guadalupe · Santos Pérez Andrea
-  </footer>
-
-  <script>
-    function showTab(tabId) {
-      const contents = document.querySelectorAll('.content');
-      contents.forEach(c => c.classList.remove('active'));
-      document.getElementById(tabId).classList.add('active');
-    }
-  </script>
-
-</body>
-</html>
+    <h2>y desarrollo de hábitos conscientes de consumo en el CBTis 118 y la comunidad</h
+     
+     
+   
